// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveBadge should render as expected with default props 1`] = `
<div>
  <div
    class="mx_LiveBadge"
  >
    <div
      class="mx_Icon mx_Icon_16"
    />
    Live
  </div>
</div>
`;

exports[`LiveBadge should render in grey as expected 1`] = `
<div>
  <div
    class="mx_LiveBadge mx_LiveBadge--grey"
  >
    <div
      class="mx_Icon mx_Icon_16"
    />
    Live
  </div>
</div>
`;
